--- a/.github/workflows/cria-branch-release.yml
+++ b/.github/workflows/cria-branch-release.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   create-release-branch:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout do repositório
