--- a/.github/workflows/cria-branch-release.yml
+++ b/.github/workflows/cria-branch-release.yml
@@ -1,13 +1,15 @@
 name: Criar branch release da main
 
 on:
+  workflow_dispatch:
   pull_request:
-    types: [opened]
+    types: [closed]
     branches:
       - main
 
 jobs:
   create-release-branch:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout do repositório
@@ -23,7 +25,7 @@ jobs:
 
       - name: Cria nova branch de release baseada na main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           VERSION=${{ steps.get_tag.outputs.TAG }}
           RELEASE_BRANCH="release/$VERSION"
