--- a/.github/workflows/create-client-release-branches.yml
+++ b/.github/workflows/create-client-release-branches.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Encontrar branches de cliente
         id: find_branches
         run: |
-          BRANCHES=$(git branch -r | grep -o 'origin/fluighub[^-]*$')
+          BRANCHES=$(git branch -r | grep 'origin/fluighub' | grep -v 'prod$)
           echo "Branches de cliente encontradas:"
           echo "$BRANCHES"
           echo "branches<<EOF" >> $GITHUB_OUTPUT
