--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Checkout branch de origem
         uses: actions/checkout@v4
         with:
-          ref: $destino_branch
+          ref: ${{env.destino_branch}}
           fetch-depth: 0  # necessário para criar branches depois
 
       - name: Copiar .properties da main
@@ -44,4 +44,4 @@ jobs:
           git checkout -B $destino_branch
           git add .
           git commit -m "Build automatizado para ${{ github.event.inputs.cliente_id }}"
-          git push origin $destino_branch --force
+          git push origin ${{env.destino_branch}} --force
