--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -59,5 +59,5 @@ jobs:
     - name: compilar projeto
       run: |
         git checkout $destino_branch
-        cd fluighub
+        cd fluigshub
         mvn clena install
