--- a/.github/workflows/ci-build-unique.yml
+++ b/.github/workflows/ci-build-unique.yml
@@ -82,7 +82,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Instalar dependências
-        run: pip install -r requirements.txt
+        run: pip install -r jobs/requirements.txt
 
       - name: Extrair dados do cliente
         run: |
