--- a/.github/workflows/ci-build-unique.yml
+++ b/.github/workflows/ci-build-unique.yml
@@ -114,12 +114,13 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: login_fluig   # <-- só roda depois do build
-
-    env:  # <-- define variáveis GLOBAIS aqui
-      destino_branch: fluighub${{ github.event.inputs.cliente_ID }}-prod
+    needs: login_fluig   # <-- só roda depois do login
       
     steps:
+
+      - name: Checkout código
+        uses: actions/checkout@v4
+      
       - name: Baixar o artifact
         uses: actions/download-artifact@v4
         with:
@@ -136,6 +137,7 @@ jobs:
           python-version: '3.10'
 
       - name: Instalar requests
+        run: pip install -r jobs/requirements.txt
         run: pip install -r jobs/requirements.txt
 
       - name: Extrair dados do cliente
